--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,253 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Poppins', sans-serif;
 }
+
+.title {
+  color: white;
+  text-shadow: 5px 3px 5px rgba(0,0,0,0.5);
+  font-weight: 800;
+  font-size: 5rem;
+  text-align: center;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 3rem 0.5rem;
+  background-image: url("https://www.transparenttextures.com/patterns/escheresque-dark.png");
+}
+.pokemon-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.all-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.pokemon-name {
+  font-size: 1.35rem;
+  margin-bottom: 0.2rem;
+  text-transform: capitalize;
+}
+
+.pokemon-number {
+  font-size: 1.1rem;
+  font-weight: 600;
+  border-radius: 1rem;
+  padding: 0.3rem 1rem;
+  margin-bottom: 1rem;
+  background-color: rgba(255,255,255,0.3);
+}
+
+.pokemon-img {
+  width: 120px;
+  height: 120px;
+  transition: all 0.2s ease;
+}
+
+.pokemon-type {
+  text-transform: capitalize;
+}
+
+
+.detail-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.detail-wrapper button {
+  color: rgb(22, 22, 22);
+  padding: .5rem;
+  margin-top: 1rem;
+  border: none;
+  border-radius: 0.2rem;
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.185);
+}
+
+.flip-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 0.3rem;
+  border: 1px solid #efefef;
+  border-radius: 0.2rem;
+  min-width: 200px;
+  height: 300px;
+  text-align: center;
+  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.089);
+  transition: 1s ease-in-out;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1.5rem;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  color: black;
+}
+
+.flip-card-back {
+  color: rgb(0, 0, 0);
+  transform: rotateY(180deg);
+}
+
+.btn-container {
+  display: flex;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  gap: 2rem;
+}
+
+button {
+  padding: .8rem 1.5rem;
+  border: unset;
+  border-radius: 1rem;
+  color: #212121;
+  z-index: 1;
+  background: #e8e8e8;
+  position: relative;
+  font-weight: 1000;
+  font-size: 1rem;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  transition: all 250ms;
+  overflow: hidden;
+}
+
+button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  border-radius: 15px;
+  z-index: -1;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  transition: all 250ms;
+}
+
+button:hover {
+  color: #e8e8e8;
+}
+
+button:hover::before {
+  width: 100%;
+}
+
+.btn-load::before {
+  background-color: #f09d30;
+}
+
+.btn-reset::before {
+  background-color: #c02f1c;
+}
+
+.rock {
+  background-color: rgb(148, 81, 81);
+}
+.ghost {
+  background-color: rgb(247, 247, 247);
+}
+.electric {
+  background-color: rgb(255, 255, 161);
+}
+.bug {
+  background-color: #F6D6A7;
+}
+.poison {
+  background-color: #e0a7f6;
+}
+.ice {
+  background-color: #98D8D8;
+}
+.dragon {
+  background-color: #8f61fa;
+}
+.dark {
+  background-color: #7f6757;
+}
+.normal {
+  background-color: #F4F4F4;
+}
+.ground {
+  background-color: #bc7638;
+}
+.fairy {
+  background-color: rgba(255, 192, 203, 0.863);
+}
+.fire {
+  background-color: #FBE3DF;
+}
+.fighting {
+  background-color: #ed544c;
+}
+.flying {
+  background-color: #A890F0;
+}
+.psychic {
+  background-color: #f66e97;
+}
+.grass {
+  background-color:#E2F9E1;
+}
+.steel {
+  background-color: #B8B8D0;
+}
+.water {
+  background-color:#E0F1FD;
+}
+
+
+@media only screen and (max-width: 425px) {
+.title {
+  font-size: 3rem;
+}
+}
+
+@media only screen and (max-width: 320px) {
+.title {
+  font-size: 2.5rem;
+}
+}
+
